--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
     "typescript": "~2.5.3",
-    "webpack-dev-server": ">=3.1.11"
+    "webpack-dev-server": ">=3.1.11",
+    "cryptiles": ">=4.1.2"
   }
 }
